# multi-agent-warehouse-robot-coordination

./: .gitignore  LICENSE  PLAN.md  PLAN2.MD  README.md  pyproject.toml
app/: dashboard.py
configs/scenarios/: bottleneck_shelves.json  dense_tasks.json  dynamic_obstacle.json  high_load_6r_30t.json  intersection_4way_crossing.json  merge_burst_priority.json  narrow_corridor.json  narrow_corridor_swap.json  parking_bay_micro_replan.json  stochastic_delay.json
docs/: PAPER_ARCHITECTURE_AND_RQ.md
results/paper/: all_raw.csv  all_raw.json  allocator_ablation.csv  allocator_ablation.tex  coordination_ablation.csv  coordination_ablation.tex  figures_manifest.json  main_comparison.csv  main_comparison.tex  planner_ablation.csv  planner_ablation.tex  robustness.csv  robustness.tex
src/warehouse_sim/: __init__.py  events.py  figures.py  grid.py  loader.py  metrics.py  models.py  paper_tables.py  pathfinding.py  reservation.py  runner.py  scenario_catalog.py  simulator.py
src/warehouse_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/warehouse_sim/agents/: __init__.py  coordinator_agent.py  robot_agent.py  task_allocator_agent.py  traffic_manager_agent.py
src/warehouse_sim/optimization/: __init__.py  hungarian.py
src/warehouse_sim/policies/: __init__.py  baseline_policy.py  coordinated_policy.py
tests/: test_allocator.py  test_events.py  test_hungarian.py  test_metrics.py  test_pathfinding.py  test_priority_rotation.py  test_reservation.py
tests/integration/: test_paper_pack.py  test_simulation.py
